[package]
name = "simpleshell"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A crate that provides a simple interface for executing commands from the user."
homepage = "https://github.com/mkapra/simpleshell"
repository = "https://github.com/mkapra/simpleshell"
readme = "README.md"

[dependencies]
